// Vitest Snapshot v1

exports[`<Routes /> > Should render page when user profil is authorized, role: '', name: 'Samuel', route: '/' 1`] = `
<DocumentFragment>
  <div>
    HomeCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> > Should render page when user profil is authorized, role: '', name: 'Samuel', route: '/forbidden' 1`] = `
<DocumentFragment>
  <div>
    PageUnauthorizeCmpt
  </div>
</DocumentFragment>
`;
